--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
 		"prosemirror-commands": "^1.7.1",
+		"prosemirror-history": "^1.4.1",
 		"prosemirror-keymap": "^1.2.3",
 		"prosemirror-model": "^1.25.1",
 		"prosemirror-state": "^1.4.3",
