--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	},
 	"license": "MIT",
 	"dependencies": {
+		"@floating-ui/dom": "^1.7.1",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
 		"prosemirror-commands": "^1.7.1",
