--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	"license": "MIT",
 	"dependencies": {
 		"@floating-ui/dom": "^1.7.1",
+		"@iconify-json/mingcute": "^1.2.3",
+		"@iconify/svelte": "^5.0.0",
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-opener": "^2",
 		"prosemirror-commands": "^1.7.1",
