--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"prosemirror-keymap": "^1.2.3",
 		"prosemirror-model": "^1.25.1",
 		"prosemirror-state": "^1.4.3",
-		"prosemirror-view": "^1.40.0"
+		"prosemirror-view": "^1.40.0",
+		"remark-parse": "^11.0.0",
+		"unified": "^11.0.5"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-static": "^3.0.6",
@@ -36,6 +38,7 @@
 		"@tauri-apps/cli": "^2",
 		"@testing-library/jest-dom": "^6.6.3",
 		"@testing-library/svelte": "^5.2.4",
+		"@types/unist": "^3.0.3",
 		"jsdom": "^26.0.0",
 		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.4.0",
