--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@tauri-apps/api": "^2",
 		"@tauri-apps/plugin-dialog": "~2",
 		"@tauri-apps/plugin-fs": "~2",
+		"@tauri-apps/plugin-global-shortcut": "~2",
 		"@tauri-apps/plugin-opener": "^2",
 		"es-toolkit": "^1.39.7",
 		"prosemirror-commands": "^1.7.1",
