--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
 	"name": "hubble-note",
 	"version": "0.1.0",
-	"description": "",
+	"description": "Never forget anything",
+	"author": "Ben Holmes",
 	"type": "module",
 	"scripts": {
 		"dev": "run-p vite:dev electron:dev",
 		"vite:dev": "vite dev",
 		"electron:dev": "wait-on http://localhost:1420 && electron src-electron/main.js",
-		"build": "vite build",
-		"preview": "vite preview",
+		"build": "run-s vite:build electron:build",
+		"vite:build": "vite build",
+		"electron:build": "electron-builder",
+		"preview": "NODE_ENV=production electron .",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"tauri": "tauri",
@@ -25,6 +28,7 @@
 		"@tauri-apps/plugin-fs": "~2",
 		"@tauri-apps/plugin-global-shortcut": "~2",
 		"@tauri-apps/plugin-opener": "^2",
+		"electron-serve": "^2.1.1",
 		"es-toolkit": "^1.39.7",
 		"npm-run-all": "^4.1.5",
 		"prosemirror-commands": "^1.7.1",
@@ -55,6 +59,7 @@
 		"vitest": "^3.2.3",
 		"wait-on": "^8.0.3"
 	},
+	"main": "src-electron/main.js",
 	"pnpm": {
 		"onlyBuiltDependencies": [
 			"electron",
