--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@tauri-apps/plugin-global-shortcut": "~2",
 		"@tauri-apps/plugin-opener": "^2",
 		"es-toolkit": "^1.39.7",
+		"keymatch": "^1.0.1",
 		"prosemirror-commands": "^1.7.1",
 		"prosemirror-history": "^1.4.1",
 		"prosemirror-keymap": "^1.2.3",
